# fishing-for-best-returns

./: .gitignore  QUICKSTART.md  README.md  pyproject.toml  requirements.txt
reports/: benchmark_all_v2_llm_analysis.md  benchmark_all_v2_summary.json
src/fishery_rl/: __init__.py
src/fishery_rl/algorithms/: __init__.py  cppo.py  es.py  sb3_train.py
src/fishery_rl/envs/: __init__.py  dynamics.py  fishery_env.py
src/fishery_rl/evaluation/: __init__.py  metrics.py  rollout.py
src/fishery_rl/safety/: __init__.py  constraints.py  verification.py
src/fishery_rl/scripts/: _common.py  benchmark.py  eval.py  llm_analyze.py  train.py  tune.py  verify.py
src/fishery_rl/tuning/: __init__.py  optuna_tune.py
src/fishery_rl/utils/: imports.py
tests/: test_smoke.py
